--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -49,7 +49,7 @@
 
 /* Modal */
 
-.modal-dialog {
+/* .modal-dialog {
  position: fixed;
  width: 90%;
  top: 50%;
@@ -69,4 +69,4 @@
    transition: transform 0.5s ease, opacity 0.3s ease;
  transform: translate(-50%, 100%);
  opacity: 0;
-}
+} */
