--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -47,26 +47,14 @@
   color: var(--color-3);
 }
 
+.tarjeta {
+  transition: all 0.3s ease;
+}
+
+.tarjeta:hover {
+  transform: translateY(-6px);
+  transition: all 0.3s ease;
+  box-shadow: 0 1rem 1.5rem rgba(160, 70, 70, 0.15) !important;
+}
+
 /* Modal */
-
-/* .modal-dialog {
- position: fixed;
- width: 90%;
- top: 50%;
- left: 50%;
- transform: translate(-50%, 100%);
- opacity: 0;
- z-index: 1050;
-}
-
-.modal-dialog.fade-in {
-   transition: transform 0.5s ease, opacity 0.3s ease;
- transform: translate(-50%, -50%);
- opacity: 1;
-}
-
-.modal-dialog.fade-out {
-   transition: transform 0.5s ease, opacity 0.3s ease;
- transform: translate(-50%, 100%);
- opacity: 0;
-} */
