--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,7 +1,7 @@
 :root {
   --color-1: #590209;
   --color-2: #8C030E;
-  --color-3: #D90416;
+  --color-3: #d90412;
   --color-4: #756F6A;
   --color-5: #bfb093;
   --dark-color: #0F0E0E;
